--- a/package.json
+++ b/package.json
@@ -9,12 +9,20 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@phosphor-icons/react": "^2.1.10",
+    "@radix-ui/react-slot": "^1.2.3",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "framer-motion": "^12.23.24",
+    "i18next": "^25.6.0",
+    "i18next-browser-languagedetector": "^8.2.0",
+    "i18next-http-backend": "^3.0.2",
     "lucide-react": "^0.548.0",
     "next": "16.0.0",
+    "next-i18next": "^15.4.2",
     "react": "19.2.0",
     "react-dom": "19.2.0",
+    "react-i18next": "^16.2.3",
     "tailwind-merge": "^3.3.1"
   },
   "devDependencies": {
